k8s/k3sa/apps/sites/portfolio-stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nordbye-service-stage
  namespace: stage-portfolio
spec:
  selector:
    app: stage-portfolio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
