k8s/k3sa/apps/sites/portfolio-stage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nordbye-ingress-stage
  namespace: stage-portfolio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stage.nordbye.it`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: nordbye-service-stage
          port: 8080
  tls:
    secretName: nordbye-it-tls
